Use new name in code

--- a/packages/starbook/404.astro
+++ b/packages/starbook/404.astro
@@ -26,7 +26,7 @@ const locale = undefined;
     <ThemeProvider />
     <PageFrame>
       <Header slot="header" locale={locale} />
-      <main id="starbook__overview">
+      <main id="starlight__overview">
         <MarkdownContent>
           <h1>404</h1>
           <p>Houston, we have a problem.</p>
@@ -40,7 +40,7 @@ const locale = undefined;
     </PageFrame>
 
     <style>
-      #starbook__overview {
+      #starlight__overview {
         margin: auto;
         padding: clamp(2rem, 10vmin, 6rem) var(--sb-nav-pad-x);
         max-width: var(--sb-content-width);
