--- a/packages/starbook/components/HeadSEO.astro
+++ b/packages/starbook/components/HeadSEO.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import config from 'virtual:starbook/user-config';
+import config from 'virtual:starlight/user-config';
 import { localizedUrl } from '../utils/localizedUrl';
 
 interface Props {
