--- a/packages/starbook/components/Header.astro
+++ b/packages/starbook/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import config from 'virtual:starbook/user-config';
+import config from 'virtual:starlight/user-config';
 import LanguageSelect from './LanguageSelect.astro';
 import Search from './Search.astro';
 import ThemeSelect from './ThemeSelect.astro';
