--- a/packages/starbook/layout/PageFrame.astro
+++ b/packages/starbook/layout/PageFrame.astro
@@ -10,7 +10,7 @@ const hasSidebar = Astro.slots.has('sidebar');
     hasSidebar && (
       <nav class="sidebar" aria-label="Main">
         <MobileMenuToggle />
-        <div id="starbook__sidebar" class="sidebar-pane">
+        <div id="starlight__sidebar" class="sidebar-pane">
           <div class="sidebar-content">
             <slot name="sidebar" />
           </div>
