--- a/packages/starbook/components/EditLink.astro
+++ b/packages/starbook/components/EditLink.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import config from 'virtual:starbook/user-config';
+import config from 'virtual:starlight/user-config';
 
 interface Props {
   data: CollectionEntry<'docs'>['data'];
