--- a/packages/starbook/components/TableOfContents.astro
+++ b/packages/starbook/components/TableOfContents.astro
@@ -1,6 +1,6 @@
 ---
 import type { MarkdownHeading } from 'astro';
-import config from 'virtual:starbook/user-config';
+import config from 'virtual:starlight/user-config';
 import { generateToC } from './TableOfContents/generateToC';
 import TableOfContentsList from './TableOfContents/TableOfContentsList.astro';
 
@@ -11,7 +11,7 @@ interface Props {
 const toc = generateToC(Astro.props.headings, config.tableOfContents);
 ---
 
-<nav aria-labelledby="starbook__on-this-page">
-  <h2 id="starbook__on-this-page">On this page</h2>
+<nav aria-labelledby="starlight__on-this-page">
+  <h2 id="starlight__on-this-page">On this page</h2>
   <TableOfContentsList toc={toc} />
 </nav>
