Rename CSS vars prefix (`--sb` => `--sl`)

--- a/packages/starlight/404.astro
+++ b/packages/starlight/404.astro
@@ -42,8 +42,8 @@ const locale = undefined;
     <style>
       #starlight__overview {
         margin: auto;
-        padding: clamp(2rem, 10vmin, 6rem) var(--sb-nav-pad-x);
-        max-width: var(--sb-content-width);
+        padding: clamp(2rem, 10vmin, 6rem) var(--sl-nav-pad-x);
+        max-width: var(--sl-content-width);
         max-width: max-content;
       }
     </style>
