--- a/packages/starlight/components/Icon.astro
+++ b/packages/starlight/components/Icon.astro
@@ -22,14 +22,14 @@ const a11yAttrs = label
   height="16"
   viewBox="0 0 24 24"
   fill="currentColor"
-  style={`--sb-icon-color: ${color}; --sb-icon-size: ${size};`}
+  style={`--sl-icon-color: ${color}; --sl-icon-size: ${size};`}
   set:html={Icons[name]}
 />
 
 <style>
   svg {
-    color: var(--sb-icon-color, inherit);
-    font-size: var(--sb-icon-size, 1em);
+    color: var(--sl-icon-color, inherit);
+    font-size: var(--sl-icon-size, 1em);
     width: 1em;
     height: 1em;
   }
