--- a/packages/starlight/components/LastUpdated.astro
+++ b/packages/starlight/components/LastUpdated.astro
@@ -35,7 +35,7 @@ try {
 <style>
   p {
     margin-block: 3rem 1.5rem;
-    font-size: var(--sb-text-sm);
-    color: var(--sb-color-gray-3);
+    font-size: var(--sl-text-sm);
+    color: var(--sl-color-gray-3);
   }
 </style>
