--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -36,8 +36,8 @@
   }
 
   .content :global(:is(h1, h2, h3, h4, h5, h6)) {
-    color: var(--sb-color-white);
-    line-height: var(--sb-line-height-headings);
+    color: var(--sl-color-white);
+    line-height: var(--sl-line-height-headings);
     font-weight: 600;
   }
 
@@ -47,41 +47,41 @@
   }
 
   .content :global(h1) {
-    font-size: var(--sb-text-h1);
+    font-size: var(--sl-text-h1);
   }
   .content :global(h2) {
-    font-size: var(--sb-text-h2);
+    font-size: var(--sl-text-h2);
   }
   .content :global(h3) {
-    font-size: var(--sb-text-h3);
+    font-size: var(--sl-text-h3);
   }
   .content :global(h4) {
-    font-size: var(--sb-text-h4);
+    font-size: var(--sl-text-h4);
   }
   .content :global(h5) {
-    font-size: var(--sb-text-h5);
+    font-size: var(--sl-text-h5);
   }
   .content :global(h6) {
-    font-size: var(--sb-text-h6);
+    font-size: var(--sl-text-h6);
   }
 
   .content :global(a) {
-    color: var(--sb-color-text-accent);
+    color: var(--sl-color-text-accent);
   }
   .content :global(a:hover) {
-    color: var(--sb-color-white);
+    color: var(--sl-color-white);
   }
 
   .content :global(code) {
-    background-color: var(--sb-color-bg-inline-code);
+    background-color: var(--sl-color-bg-inline-code);
     margin-block: -0.125rem;
     padding: 0.125rem 0.375rem;
   }
 
   .content :global(pre) {
-    border: 1px solid var(--sb-color-gray-5);
+    border: 1px solid var(--sl-color-gray-5);
     padding: 0.75rem 1rem;
-    font-size: var(--sb-text-code);
+    font-size: var(--sl-text-code);
   }
 
   .content :global(pre code) {
@@ -89,24 +89,24 @@
   }
 
   .content :global(blockquote) {
-    border-inline-start: 1px solid var(--sb-color-gray-5);
+    border-inline-start: 1px solid var(--sl-color-gray-5);
     padding-inline-start: 1rem;
   }
 
   .content :global(table) {
-    border: 1px solid var(--sb-color-gray-5);
+    border: 1px solid var(--sl-color-gray-5);
     border-collapse: collapse;
   }
   .content :global(tr:nth-child(2n)) {
-    background-color: var(--sb-color-gray-7, var(--sb-color-gray-6));
+    background-color: var(--sl-color-gray-7, var(--sl-color-gray-6));
   }
   .content :global(:is(th, td)) {
-    border: 1px solid var(--sb-color-hairline);
+    border: 1px solid var(--sl-color-hairline);
     padding: 0.375rem 0.8125rem;
   }
 
   .content :global(hr) {
     border: 0;
-    border-bottom: 1px solid var(--sb-color-hairline);
+    border-bottom: 1px solid var(--sl-color-hairline);
   }
 </style>
