--- a/packages/starlight/components/MobileMenuToggle.astro
+++ b/packages/starlight/components/MobileMenuToggle.astro
@@ -52,33 +52,33 @@ import Icon from './Icon.astro';
 <style>
   button {
     position: fixed;
-    top: calc((var(--sb-nav-height) - var(--sb-menu-button-size)) / 2);
-    inset-inline-end: var(--sb-nav-pad-x);
-    z-index: var(--sb-z-index-navbar);
+    top: calc((var(--sl-nav-height) - var(--sl-menu-button-size)) / 2);
+    inset-inline-end: var(--sl-nav-pad-x);
+    z-index: var(--sl-z-index-navbar);
     border: 0;
     border-radius: 50%;
     display: flex;
-    width: var(--sb-menu-button-size);
-    height: var(--sb-menu-button-size);
+    width: var(--sl-menu-button-size);
+    height: var(--sl-menu-button-size);
     padding: 0.5rem;
-    background-color: var(--sb-color-white);
-    color: var(--sb-color-black);
-    box-shadow: var(--sb-shadow-md);
+    background-color: var(--sl-color-white);
+    color: var(--sl-color-black);
+    box-shadow: var(--sl-shadow-md);
     cursor: pointer;
   }
 
   [aria-expanded='true'] button {
-    background-color: var(--sb-color-gray-2);
+    background-color: var(--sl-color-gray-2);
     box-shadow: none;
   }
 
   :global([data-theme='light']) button {
-    background-color: var(--sb-color-black);
-    color: var(--sb-color-white);
+    background-color: var(--sl-color-black);
+    color: var(--sl-color-white);
   }
 
   :global([data-theme='light']) [aria-expanded='true'] button {
-    background-color: var(--sb-color-gray-5);
+    background-color: var(--sl-color-gray-5);
   }
 </style>
 
