--- a/packages/starlight/components/PrevNextLinks.astro
+++ b/packages/starlight/components/PrevNextLinks.astro
@@ -54,11 +54,11 @@ const isRtl = dir === 'rtl';
     width: 100%;
     flex-basis: calc(50% - 0.5rem);
     flex-grow: 1;
-    border: 1px solid var(--sb-color-gray-5);
+    border: 1px solid var(--sl-color-gray-5);
     border-radius: 0.5rem;
     padding: 1rem;
     text-decoration: none;
-    color: var(--sb-color-gray-2);
+    color: var(--sl-color-gray-2);
   }
   [rel='next'] {
     justify-content: end;
@@ -66,12 +66,12 @@ const isRtl = dir === 'rtl';
     flex-direction: row-reverse;
   }
   a:hover {
-    border-color: var(--sb-color-gray-2);
+    border-color: var(--sl-color-gray-2);
   }
 
   .link-title {
-    color: var(--sb-color-white);
-    font-size: var(--sb-text-2xl);
-    line-height: var(--sb-line-height-headings);
+    color: var(--sl-color-white);
+    font-size: var(--sl-text-2xl);
+    line-height: var(--sl-line-height-headings);
   }
 </style>
