--- a/packages/starlight/components/SkipLink.astro
+++ b/packages/starlight/components/SkipLink.astro
@@ -7,12 +7,12 @@
     inset-inline-start: 0.75rem;
   }
   a:focus {
-    z-index: var(--sb-z-index-skiplink);
+    z-index: var(--sl-z-index-skiplink);
     display: block;
     padding: 0.5rem 1rem;
     text-decoration: none;
-    color: var(--sb-color-text-invert);
-    background-color: var(--sb-color-text-accent);
-    box-shadow: var(--sb-shadow-lg);
+    color: var(--sl-color-text-invert);
+    background-color: var(--sl-color-text-accent);
+    box-shadow: var(--sl-shadow-lg);
   }
 </style>
