--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -82,7 +82,7 @@ const prevNextLinks = getPrevNextLinks(sidebar);
         >
           <ContentPanel>
             <h1
-              style="font-size: var(--sb-text-h1); line-height: var(--sb-line-height-headings); font-weight: 600; color: var(--sb-color-white); margin-top: 1rem;"
+              style="font-size: var(--sl-text-h1); line-height: var(--sl-line-height-headings); font-weight: 600; color: var(--sl-color-white); margin-top: 1rem;"
             >
               {entry.data.title}
             </h1>
