--- a/packages/starlight/components/ContentPanel.astro
+++ b/packages/starlight/components/ContentPanel.astro
@@ -4,13 +4,13 @@
 
 <style>
   .content-panel {
-    padding: 1.5rem var(--sb-content-pad-x);
+    padding: 1.5rem var(--sl-content-pad-x);
   }
   .content-panel + .content-panel {
-    border-top: 1px solid var(--sb-color-hairline);
+    border-top: 1px solid var(--sl-color-hairline);
   }
   .container {
-    max-width: var(--sb-content-width);
+    max-width: var(--sl-content-width);
   }
 
   .container > :global(* + *) {
