--- a/packages/starlight/components/FallbackContentNotice.astro
+++ b/packages/starlight/components/FallbackContentNotice.astro
@@ -6,22 +6,22 @@ import Icon from './Icon.astro';
   <Icon
     name={'warning'}
     size="1.5em"
-    color="var(--sb-color-orange-high)"
+    color="var(--sl-color-orange-high)"
   /><span>This content is not available in your language yet.</span>
 </p>
 
 <style>
   p {
-    border: 1px solid var(--sb-color-orange);
+    border: 1px solid var(--sl-color-orange);
     padding: 0.75em 1em;
-    background-color: var(--sb-color-orange-low);
-    color: var(--sb-color-orange-high);
+    background-color: var(--sl-color-orange-low);
+    color: var(--sl-color-orange-high);
     width: max-content;
     max-width: 100%;
     display: flex;
     align-items: center;
     gap: 0.75em;
-    font-size: var(--sb-text-body-sm);
-    line-height: var(--sb-line-height-headings);
+    font-size: var(--sl-text-body-sm);
+    line-height: var(--sl-line-height-headings);
   }
 </style>
