--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -6,32 +6,32 @@
 
 <style>
   .right-sidebar-panel {
-    padding: 1rem var(--sb-sidebar-pad-x);
+    padding: 1rem var(--sl-sidebar-pad-x);
   }
   .right-sidebar-panel + .right-sidebar-panel {
-    border-top: 1px solid var(--sb-color-hairline);
+    border-top: 1px solid var(--sl-color-hairline);
   }
   .container {
-    width: var(--sb-sidebar-width);
+    width: var(--sl-sidebar-width);
   }
   .right-sidebar-panel :global(h2) {
-    color: var(--sb-color-white);
-    font-size: var(--sb-text-base);
+    color: var(--sl-color-white);
+    font-size: var(--sl-text-base);
     font-weight: 600;
   }
   .right-sidebar-panel :global(a) {
     display: block;
-    font-size: var(--sb-text-xs);
+    font-size: var(--sl-text-xs);
     text-decoration: none;
-    color: var(--sb-color-gray-3);
+    color: var(--sl-color-gray-3);
   }
   .right-sidebar-panel :global(a:hover) {
-    color: var(--sb-color-white);
+    color: var(--sl-color-white);
   }
   @media (min-width: 72rem) {
     .container {
       max-width: calc(
-        100vw - var(--sb-content-width) - var(--sb-sidebar-width)
+        100vw - var(--sl-content-width) - var(--sl-sidebar-width)
       );
     }
   }
