--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -21,14 +21,14 @@ interface Props {
 <style>
   .sidebar {
     height: 100%;
-    padding: 1rem var(--sb-sidebar-pad-x);
+    padding: 1rem var(--sl-sidebar-pad-x);
     flex-direction: column;
     gap: 1rem;
   }
 
   .mobile-preferences {
     justify-content: space-between;
-    border-top: 1px solid var(--sb-color-gray-6);
+    border-top: 1px solid var(--sl-color-gray-6);
     padding: 0.5rem 0;
   }
 </style>
