--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -27,16 +27,16 @@ interface Props {
 
 <style>
   ul {
-    --sb-sidebar-item-padding-inline: 0.5rem;
+    --sl-sidebar-item-padding-inline: 0.5rem;
     list-style: none;
     padding: 0;
   }
 
   h2 {
-    font-size: var(--sb-text-lg);
+    font-size: var(--sl-text-lg);
     font-weight: 600;
-    color: var(--sb-color-white);
-    padding-inline: var(--sb-sidebar-item-padding-inline);
+    color: var(--sl-color-white);
+    padding-inline: var(--sl-sidebar-item-padding-inline);
   }
 
   .sidebar-group + .sidebar-group {
@@ -47,21 +47,21 @@ interface Props {
     display: block;
     border-radius: 0.25rem;
     text-decoration: none;
-    color: var(--sb-color-gray-2);
-    padding-inline: var(--sb-sidebar-item-padding-inline);
+    color: var(--sl-color-gray-2);
+    padding-inline: var(--sl-sidebar-item-padding-inline);
   }
 
   a:hover,
   a:focus {
-    color: var(--sb-color-white);
+    color: var(--sl-color-white);
   }
 
   [aria-current='true'],
   [aria-current='true']:hover,
   [aria-current='true']:focus {
     font-weight: 600;
-    color: var(--sb-color-text-invert);
-    background-color: var(--sb-color-text-accent);
+    color: var(--sl-color-text-invert);
+    background-color: var(--sl-color-text-accent);
   }
 
   @media (min-width: 50rem) {
@@ -69,10 +69,10 @@ interface Props {
       margin-top: 0.5rem;
     }
     h2 {
-      font-size: var(--sb-text-base);
+      font-size: var(--sl-text-base);
     }
     a {
-      font-size: var(--sb-text-xs);
+      font-size: var(--sl-text-xs);
     }
   }
 </style>
