--- a/packages/starlight/layout/PageFrame.astro
+++ b/packages/starlight/layout/PageFrame.astro
@@ -29,36 +29,36 @@ const hasSidebar = Astro.slots.has('sidebar');
   }
 
   .header {
-    z-index: var(--sb-z-index-navbar);
+    z-index: var(--sl-z-index-navbar);
     position: fixed;
     inset-inline-start: 0;
     inset-block-start: 0;
     width: 100%;
-    height: var(--sb-nav-height);
-    border-bottom: 1px solid var(--sb-color-hairline-shade);
-    padding: var(--sb-nav-pad-y) var(--sb-nav-pad-x);
-    padding-inline-end: var(--sb-nav-pad-x);
-    background-color: var(--sb-color-bg-nav);
+    height: var(--sl-nav-height);
+    border-bottom: 1px solid var(--sl-color-hairline-shade);
+    padding: var(--sl-nav-pad-y) var(--sl-nav-pad-x);
+    padding-inline-end: var(--sl-nav-pad-x);
+    background-color: var(--sl-color-bg-nav);
   }
 
   .hasSidebar .header {
     padding-inline-end: calc(
-      var(--sb-nav-gap) + var(--sb-nav-pad-x) + var(--sb-menu-button-size)
+      var(--sl-nav-gap) + var(--sl-nav-pad-x) + var(--sl-menu-button-size)
     );
   }
 
   .sidebar-pane {
-    visibility: var(--sb-sidebar-visibility, hidden);
+    visibility: var(--sl-sidebar-visibility, hidden);
     position: fixed;
     inset-block: 0;
     inset-inline-start: 0;
-    padding-top: var(--sb-nav-height);
+    padding-top: var(--sl-nav-height);
     width: 100%;
-    background-color: var(--sb-color-black);
+    background-color: var(--sl-color-black);
   }
 
   :global([aria-expanded='true']) ~ .sidebar-pane {
-    --sb-sidebar-visibility: visible;
+    --sl-sidebar-visibility: visible;
   }
 
   .sidebar-content {
@@ -67,22 +67,22 @@ const hasSidebar = Astro.slots.has('sidebar');
   }
 
   .main-frame {
-    padding-top: var(--sb-nav-height);
+    padding-top: var(--sl-nav-height);
   }
 
   @media (min-width: 50rem) {
     .hasSidebar .header {
-      padding-inline-end: var(--sb-nav-pad-x);
+      padding-inline-end: var(--sl-nav-pad-x);
     }
     .sidebar-pane {
-      --sb-sidebar-visibility: visible;
-      width: var(--sb-sidebar-width);
-      background-color: var(--sb-color-bg-sidebar);
-      border-inline-end: 1px solid var(--sb-color-hairline-shade);
+      --sl-sidebar-visibility: visible;
+      width: var(--sl-sidebar-width);
+      background-color: var(--sl-color-bg-sidebar);
+      border-inline-end: 1px solid var(--sl-color-hairline-shade);
     }
 
     .hasSidebar .main-frame {
-      padding-inline-start: var(--sb-sidebar-width);
+      padding-inline-start: var(--sl-sidebar-width);
     }
   }
 </style>
