--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -15,16 +15,16 @@
       order: 2;
       position: relative;
       width: calc(
-        var(--sb-sidebar-width) +
-          (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
+        var(--sl-sidebar-width) +
+          (100% - var(--sl-content-width) - var(--sl-sidebar-width)) / 2
       );
     }
 
     .right-sidebar {
       position: fixed;
       top: 0;
-      border-inline-start: 1px solid var(--sb-color-gray-6);
-      padding-top: var(--sb-nav-height);
+      border-inline-start: 1px solid var(--sl-color-gray-6);
+      padding-top: var(--sl-nav-height);
       width: 100%;
       height: 100vh;
       overflow-y: auto;
@@ -34,8 +34,8 @@
     .main-pane {
       order: 1;
       width: calc(
-        var(--sb-content-width) +
-          (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
+        var(--sl-content-width) +
+          (100% - var(--sl-content-width) - var(--sl-sidebar-width)) / 2
       );
     }
   }
