--- a/packages/starlight/style/shiki.css
+++ b/packages/starlight/style/shiki.css
@@ -1,13 +1,13 @@
 :root {
-  --astro-code-color-text: var(--sb-color-white);
-  --astro-code-color-background: var(--sb-color-gray-6);
-  --astro-code-token-constant: var(--sb-color-blue-high);
-  --astro-code-token-string: var(--sb-color-green-high);
-  --astro-code-token-comment: var(--sb-color-gray-2);
-  --astro-code-token-keyword: var(--sb-color-purple-high);
-  --astro-code-token-parameter: var(--sb-color-red-high);
-  --astro-code-token-function: var(--sb-color-red-high);
-  --astro-code-token-string-expression: var(--sb-color-green-high);
-  --astro-code-token-punctuation: var(--sb-color-gray-2);
-  --astro-code-token-link: var(--sb-color-blue-high);
+  --astro-code-color-text: var(--sl-color-white);
+  --astro-code-color-background: var(--sl-color-gray-6);
+  --astro-code-token-constant: var(--sl-color-blue-high);
+  --astro-code-token-string: var(--sl-color-green-high);
+  --astro-code-token-comment: var(--sl-color-gray-2);
+  --astro-code-token-keyword: var(--sl-color-purple-high);
+  --astro-code-token-parameter: var(--sl-color-red-high);
+  --astro-code-token-function: var(--sl-color-red-high);
+  --astro-code-token-string-expression: var(--sl-color-green-high);
+  --astro-code-token-punctuation: var(--sl-color-gray-2);
+  --astro-code-token-link: var(--sl-color-blue-high);
 }
