--- a/packages/starlight/components/Header.astro
+++ b/packages/starlight/components/Header.astro
@@ -3,6 +3,7 @@ import config from 'virtual:starlight/user-config';
 import LanguageSelect from './LanguageSelect.astro';
 import Search from './Search.astro';
 import ThemeSelect from './ThemeSelect.astro';
+import SocialIcons from './SocialIcons.astro';
 
 interface Props {
   locale: string | undefined;
@@ -13,6 +14,7 @@ interface Props {
   <a href={import.meta.env.BASE_URL} class="site-title">{config.title}</a>
   <Search />
   <div class="hidden md:flex right-group">
+    <SocialIcons />
     <ThemeSelect />
     <LanguageSelect locale={Astro.props.locale} />
   </div>
@@ -37,6 +39,7 @@ interface Props {
 
   .right-group {
     gap: 1rem;
+    align-items: center;
   }
 
   @media (min-width: 50rem) {
