--- a/packages/starlight/components/TableOfContents/TableOfContentsList.astro
+++ b/packages/starlight/components/TableOfContents/TableOfContentsList.astro
@@ -3,31 +3,33 @@ import type { generateToC } from './generateToC';
 
 interface Props {
   toc: ReturnType<typeof generateToC>;
-  nested?: boolean;
+  depth?: number;
 }
 
-const { toc, nested } = Astro.props;
+const { toc, depth = 0 } = Astro.props;
 ---
 
-<ul class:list={{ nested }}>
+<ul>
   {
     toc.map((heading) => (
       <li>
         <a href={'#' + heading.slug}>{heading.text}</a>
         {heading.children.length > 0 && (
-          <Astro.self toc={heading.children} nested />
+          <Astro.self toc={heading.children} depth={depth + 1} />
         )}
       </li>
     ))
   }
 </ul>
 
-<style>
+<style define:vars={{ depth }}>
   ul {
     padding: 0;
   }
-  .nested {
-    padding-inline-start: 1rem;
+  a {
+    display: block;
+    padding-inline: calc(1rem * var(--depth) + var(--toc-pad-inline, 0rem))
+      var(--toc-pad-inline, 0rem);
   }
   ul :global(::marker) {
     color: transparent;
