Hide right sidebar on wide viewports

--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -1,5 +1,5 @@
 <div class="container">
-  <aside class="right-sidebar-container">
+  <aside class="right-sidebar-container hidden lg:block">
     <div class="right-sidebar"><slot name="right-sidebar" /></div>
   </aside>
   <div class="main-pane"><slot /></div>
