--- a/packages/starlight/style/util.css
+++ b/packages/starlight/style/util.css
@@ -30,3 +30,14 @@
     display: block;
   }
 }
+@media (min-width: 72rem) {
+  .lg\:hidden {
+    display: none;
+  }
+  .lg\:flex {
+    display: flex;
+  }
+  .lg\:block {
+    display: block;
+  }
+}
