Fix mobile nav bar height & font-size

--- a/packages/starlight/components/Header.astro
+++ b/packages/starlight/components/Header.astro
@@ -30,7 +30,7 @@ interface Props {
   }
 
   .site-title {
-    font-size: var(--sl-text-2xl);
+    font-size: var(--sl-text-h4);
     font-weight: 600;
     color: var(--sl-color-text-accent);
     text-decoration: none;
