--- a/packages/starlight/layout/PageFrame.astro
+++ b/packages/starlight/layout/PageFrame.astro
@@ -50,6 +50,7 @@ const hasSidebar = Astro.slots.has('sidebar');
   .sidebar-pane {
     visibility: var(--sl-sidebar-visibility, hidden);
     position: fixed;
+    z-index: var(--sl-z-index-menu);
     inset-block: 0;
     inset-inline-start: 0;
     padding-top: var(--sl-nav-height);
@@ -67,7 +68,7 @@ const hasSidebar = Astro.slots.has('sidebar');
   }
 
   .main-frame {
-    padding-top: var(--sl-nav-height);
+    padding-top: calc(var(--sl-nav-height) + var(--sl-mobile-toc-height));
   }
 
   @media (min-width: 50rem) {
