--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -16,8 +16,10 @@
   }
   .right-sidebar-panel :global(h2) {
     color: var(--sl-color-white);
-    font-size: var(--sl-text-base);
+    font-size: var(--sl-text-h5);
     font-weight: 600;
+    line-height: var(--sl-line-height-headings);
+    margin-bottom: 0.5rem;
   }
   .right-sidebar-panel :global(a) {
     display: block;
